# embassy-sl

./: LICENSE  README.md
embassy-silabs/: Cargo.toml
embassy-silabs-project/: Cargo.toml  download.jlink  embassy-silabs.out  memory.x  rtt-defmt.js
embassy-silabs-project/.cargo/: config.toml
embassy-silabs-project/src/: main.rs
embassy-silabs/.cargo/: config.toml
embassy-silabs/src/: gpio.rs  lib.rs  time_driver.rs
embassy-silabs/src/chips/: efr32xg24.rs
silabs-pac/: Cargo.toml  device.x  svd2rust.toml  transform.yaml
silabs-pac/svd/: EFR32MG24B220F1536IM48.yaml  armv8m.svd  armv8m.yaml
silabs-pac/yaml/: ACMP0_NS.yaml  ACMP0_S.yaml  ACMP1_NS.yaml  ACMP1_S.yaml  BURAM_NS.yaml  BURAM_S.yaml  BURTC_NS.yaml  BURTC_S.yaml  CMU_NS.yaml  CMU_S.yaml  DCDC_NS.yaml  DCDC_S.yaml  DEVINFO.yaml  DMEM_NS.yaml  DMEM_S.yaml  DPLL0_NS.yaml  DPLL0_S.yaml  EMU_NS.yaml  EMU_S.yaml  EUSART0_NS.yaml  EUSART0_S.yaml  EUSART1_NS.yaml  EUSART1_S.yaml  FSRCO_NS.yaml  FSRCO_S.yaml  GPCRC_NS.yaml  GPCRC_S.yaml  GPIO_NS.yaml  GPIO_S.yaml  HFRCO0_NS.yaml  HFRCO0_S.yaml  HFRCOEM23_NS.yaml  HFRCOEM23_S.yaml  HFXO0_NS.yaml  HFXO0_S.yaml  HOSTMAILBOX_NS.yaml  HOSTMAILBOX_S.yaml  I2C0_NS.yaml  I2C0_S.yaml  I2C1_NS.yaml  (+63 more)
