[package]
name = "embassy-silabs-project"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = 2

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
panic-probe = "1.0.0"
silabs-pac = { version = "0.1.0", path = "../silabs-pac", features = [
    "rt",
    "critical-section",
    "cortex-m-rt",
] }
embassy-silabs = { version = "0.1.0", path = "../embassy-silabs", features = [
    "rt",
    "defmt",
] }

[dev-dependencies]
embedded-test = "0.6.0"
