[package]
name = "embassy-silabs"
version = "0.1.0"
edition = "2024"
description = "Embassy Hardware Abstraction Layer (HAL) for Silabs EFR32xG microcontrollers"

[features]
default = ["rt", "xg24"]
## Cortex-M runtime (enabled by default)
rt = ["silabs-pac/rt"]

## Enable defmt
defmt = [
    "dep:defmt",
    "embassy-hal-internal/defmt",
    "embassy-sync/defmt",
    "embassy-usb-driver/defmt",
    "embassy-embedded-hal/defmt",
]

xg24 = ["_xg24"]

_xg24 = []

[dependencies]
embassy-hal-internal = { version = "0.2.0", features = [
    "cortex-m",
    "prio-bits-3",
], git = "https://github.com/embassy-rs/embassy.git" }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = { version = "1.0.1", optional = true }
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", optional = true }
embassy-time-driver = { version = "0.2.0", optional = true }
embassy-usb-driver = "0.1.0"
embedded-hal = "1.0.0"
silabs-pac = { version = "0.1.0", path = "../silabs-pac", features = ["rt"] }
