[package]
name = "embassy-silabs"
version = "0.1.0"
edition = "2024"
description = "Embassy Hardware Abstraction Layer (HAL) for Silabs EFR32xG microcontrollers"

[features]
default = ["rt", "xg24", "_ns", "_time-driver"]
## Cortex-M runtime (enabled by default)
rt = ["silabs-pac/rt"]

## Enable defmt
defmt = [
    "dep:defmt",
    "embassy-hal-internal/defmt",
    "embassy-sync/defmt",
    "embassy-usb-driver/defmt",
    "embassy-embedded-hal/defmt",
]

## Chip families
xg24 = ["_xg24"]
_xg24 = []

## Secure / nonsecure
_ns = []
_s = []

_time-driver = [
    "dep:embassy-time-driver",
    "embassy-time-driver?/tick-hz-32_768",
    "dep:embassy-time-queue-utils",
    "embassy-embedded-hal/time",
]

[dependencies]
embassy-time-driver = { version = "0.2.0", optional = true, features = [
    "tick-hz-32_768",
] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = { version = "1.0.1", optional = true }
embassy-hal-internal = { version = "0.2.0", features = [
    "cortex-m",
    "prio-bits-3",
], git = "https://github.com/embassy-rs/embassy.git" }
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", optional = true }
embassy-time-queue-utils = { version = "0.1", optional = true }
embassy-usb-driver = "0.1.0"
embedded-hal = "1.0.0"
silabs-pac = { version = "0.1.0", path = "../silabs-pac", features = ["rt"] }
