[package]
name = "embassy-silabs"
version = "0.1.0"
edition = "2024"
description = "Embassy Hardware Abstraction Layer (HAL) for Silabs EFR32xG microcontrollers"

[features]
default = ["rt", "xg24", "_ns", "_time-driver"]
## Cortex-M runtime (enabled by default)
rt = ["silabs-pac/rt"]

## Enable defmt
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-hal-internal/defmt",
    "embassy-sync/defmt",
    #    "embassy-usb-driver/defmt",
    "embassy-embedded-hal/defmt",
]

## Chip families
xg24 = ["_xg24"]
_xg24 = []

## Secure / nonsecure
_ns = []
_s = []

_time-driver = [
    "dep:embassy-time-driver",
    "embassy-time-driver?/tick-hz-32_768",
    "dep:embassy-time-queue-utils",
    "embassy-embedded-hal/time",
]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

embassy-time = { git = "https://github.com/embassy-rs/embassy.git", optional = true }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", optional = true, features = [
    "tick-hz-32_768",
] }
embassy-hal-internal = { version = "0.2.0", features = [
    "cortex-m",
    "prio-bits-3",
], git = "https://github.com/embassy-rs/embassy.git" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy.git", optional = true }
#embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy.git" }

embedded-hal = "1.0.0"
silabs-pac = { version = "0.1.0", path = "../silabs-pac", features = ["rt"] }
